--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -135,14 +135,25 @@ jobs:
 ##          asset_content_type: application/zip
 
   # notifies coveralls that all test jobs are finished
-  finish:
-    name: Finish
+  finish-cov:
+    name: Finish Coverage
     needs: coverage
     runs-on: ubuntu-latest
     steps:
       - uses: shogo82148/actions-goveralls@v1
         with:
           parallel-finished: true
+
+  do-release:
+    runs-on: ubuntu-latest
+    needs: coverage
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+
 
 
 
