--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [ 1.11.x, 1.17.x ]
+        go-version: [ 1.11.x, 1.17.x, 1.20.x ]
         #os: [ubuntu-latest, macos-latest, windows-latest]
         os: [ ubuntu-latest ]
       fail-fast: false
@@ -46,7 +46,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17.x
+          go-version: 1.20.x
       - name: Checkout code
         uses: actions/checkout@v2
         #with:
